as any admin I can upload a book to lerase it on public view
